--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "browserify-zlib": "^0.2.0",
     "firebase": "^9.14.0",
-    "react-hover-slideshow": "^2.1.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -25,8 +25,13 @@
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
     "sass": "^1.56.1",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
+  },
+  "browser": {
+    "zlib": "false",
+    "stream": "false"
   },
   "scripts": {
     "start": "react-scripts start",
